# Fastapi-Beanie-Mongodb-Docker

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: github-actions-demo.yml
app/: .dockerignore  Dockerfile  main.py  requirements.txt
app/server/: app.py  database.py
app/server/models/: product_review.py
app/server/routes/: product_review.py
