[tool.poetry]
name = "fastapi-beanie"
version = "0.1.0"
description = "Craft blazing-fast & scalable APIs with ease. This project combines the power of FastAPI's speed ⚡️, MongoDB's flexible storage and Beanie ODM's smooth object mapping ✨"
authors = ["AgathaBahati <matinodev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.78.0"
uvicorn = "0.17.6"
beanie = "1.11.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
